2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt:  move serial device from
	src/libYARP_dev/src/serial, portaudio device from
	src/libYARP_dev/src/portaudio

2008-03-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: move ffmpeg wrapper from
	src/libYARP_dev/src/ffmpeg, opencv wrapper from
	src/libYARP_dev/src/opencv_grabber, microphone wrapper from
	src/libYARP_dev/src/microphone

	* src/modules/ffmpeg/ffmpeg_api.cpp: deal with changes in ffmpeg
	library related to image format conversion.

	* conf/FindFFMPEG.cmake: deal with ffmpeg library and header file
	reorganization.

2008-03-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze version 2.1.9

2007-03-14  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_OS/include/yarp/ShmemTypes.h : added
	* src/yarp/libYARP_OS/include/yarp/ShmemInputStream.h : added
	* src/yarp/libYARP_OS/include/yarp/ShmemOutputStream.h : added
	* src/yarp/libYARP_OS/include/yarp/ShmemHybridStream.h : modified
	* src/yarp/libYARP_OS/src/ShmemInputStream.cpp : added
	* src/yarp/libYARP_OS/src/ShmemOutputStream.cpp : added
	* src/yarp/libYARP_OS/src/ShmemHybridStream.cpp : modified
	New version, based on ACE Process Semaphores. Faster. 

2008-03-13  Lorenzo Natale <nat@liralab.it>

	* src/libYARP_OS/include/yarp/os/RateThread.h,cpp: added methods
	to compute thread statistics. Corrected imprecise behavior probably
	due to ACE timers.

	* example/os/rateThreadTiming.cpp: example to test timing performance

2008-03-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/CMakeLists.txt: Moved order of compilation of libYARP_math
	earlier, possible problems compiling harness_dev with some cmake
	versions otherwise.

	* conf/YarpDevice.cmake: YARP_MODULE_PATH overwritten incorrectly

2008-03-12  Giacomo Spigler  <spiglerg@gmail.com>
	* src/modules/SerialServoBoard: new SerialServo board device driver added.