@@ -28,11 +28,10 @@ BEGIN_DEVICE_LIBRARY(yarpmod)
   ADD_SUBDIRECTORY(microphone)
   ADD_SUBDIRECTORY(serial)
   ADD_SUBDIRECTORY(portaudio)
+  ADD_SUBDIRECTORY(firewirecamera)
   # we can include remote directories as well - we specify a 
   # local directory for producing binaries so there is no interference
   # with other possible builds.
-  ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/firewirecamera
-                   ${CMAKE_CURRENT_BINARY_DIR}/firewirecamera)
   ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/urbtc
                    ${CMAKE_CURRENT_BINARY_DIR}/urbtc)
   ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/jrkerr
